src/morphforgeexamples/summary_testing/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    SHORT_WATT
    SHORT_NEWTON
    LONG_NEWTON
    SHORT_LITER
    LONG_LITER
    LONG_WATT

Grammar

Rule 0     S' -> unit_term_unpowered
Rule 1     unit_term_unpowered -> short_basic_unit
Rule 2     unit_term_unpowered -> long_basic_unit
Rule 3     unit_term_unpowered -> long_basic_multiplier long_basic_unit
Rule 4     unit_term_unpowered -> short_basic_multiplier short_basic_unit
Rule 5     long_basic_unit -> LONG_VOLT
Rule 6     long_basic_unit -> LONG_AMP
Rule 7     long_basic_unit -> LONG_SIEMEN
Rule 8     long_basic_unit -> LONG_JOULE
Rule 9     long_basic_unit -> LONG_OHM
Rule 10    long_basic_unit -> LONG_COULOMB
Rule 11    long_basic_unit -> LONG_FARAD
Rule 12    long_basic_unit -> LONG_METER
Rule 13    long_basic_unit -> LONG_GRAM
Rule 14    long_basic_unit -> LONG_SECOND
Rule 15    long_basic_unit -> LONG_KELVIN
Rule 16    long_basic_unit -> LONG_MOLE
Rule 17    long_basic_unit -> LONG_CANDELA
Rule 18    long_basic_unit -> LONG_MOLAR
Rule 19    long_basic_unit -> LONG_HERTZ
Rule 20    short_basic_unit -> SHORT_VOLT
Rule 21    short_basic_unit -> SHORT_AMP
Rule 22    short_basic_unit -> SHORT_SIEMEN
Rule 23    short_basic_unit -> SHORT_JOULE
Rule 24    short_basic_unit -> SHORT_OHM
Rule 25    short_basic_unit -> SHORT_COULOMB
Rule 26    short_basic_unit -> SHORT_FARAD
Rule 27    short_basic_unit -> SHORT_METER
Rule 28    short_basic_unit -> SHORT_GRAM
Rule 29    short_basic_unit -> SHORT_SECOND
Rule 30    short_basic_unit -> SHORT_KELVIN
Rule 31    short_basic_unit -> SHORT_MOLE
Rule 32    short_basic_unit -> SHORT_CANDELA
Rule 33    short_basic_unit -> SHORT_MOLAR
Rule 34    short_basic_unit -> SHORT_HERTZ
Rule 35    long_basic_multiplier -> LONG_GIGA
Rule 36    long_basic_multiplier -> LONG_MEGA
Rule 37    long_basic_multiplier -> LONG_KILO
Rule 38    long_basic_multiplier -> LONG_CENTI
Rule 39    long_basic_multiplier -> LONG_MILLI
Rule 40    long_basic_multiplier -> LONG_MICRO
Rule 41    long_basic_multiplier -> LONG_NANO
Rule 42    long_basic_multiplier -> LONG_PICO
Rule 43    short_basic_multiplier -> SHORT_GIGA
Rule 44    short_basic_multiplier -> SHORT_MEGA
Rule 45    short_basic_multiplier -> SHORT_KILO
Rule 46    short_basic_multiplier -> SHORT_CENTI
Rule 47    short_basic_multiplier -> SHORT_MILLI
Rule 48    short_basic_multiplier -> SHORT_MICRO
Rule 49    short_basic_multiplier -> SHORT_NANO
Rule 50    short_basic_multiplier -> SHORT_PICO

Terminals, with rules where they appear

LONG_AMP             : 6
LONG_CANDELA         : 17
LONG_CENTI           : 38
LONG_COULOMB         : 10
LONG_FARAD           : 11
LONG_GIGA            : 35
LONG_GRAM            : 13
LONG_HERTZ           : 19
LONG_JOULE           : 8
LONG_KELVIN          : 15
LONG_KILO            : 37
LONG_LITER           : 
LONG_MEGA            : 36
LONG_METER           : 12
LONG_MICRO           : 40
LONG_MILLI           : 39
LONG_MOLAR           : 18
LONG_MOLE            : 16
LONG_NANO            : 41
LONG_NEWTON          : 
LONG_OHM             : 9
LONG_PICO            : 42
LONG_SECOND          : 14
LONG_SIEMEN          : 7
LONG_VOLT            : 5
LONG_WATT            : 
SHORT_AMP            : 21
SHORT_CANDELA        : 32
SHORT_CENTI          : 46
SHORT_COULOMB        : 25
SHORT_FARAD          : 26
SHORT_GIGA           : 43
SHORT_GRAM           : 28
SHORT_HERTZ          : 34
SHORT_JOULE          : 23
SHORT_KELVIN         : 30
SHORT_KILO           : 45
SHORT_LITER          : 
SHORT_MEGA           : 44
SHORT_METER          : 27
SHORT_MICRO          : 48
SHORT_MILLI          : 47
SHORT_MOLAR          : 33
SHORT_MOLE           : 31
SHORT_NANO           : 49
SHORT_NEWTON         : 
SHORT_OHM            : 24
SHORT_PICO           : 50
SHORT_SECOND         : 29
SHORT_SIEMEN         : 22
SHORT_VOLT           : 20
SHORT_WATT           : 
error                : 

Nonterminals, with rules where they appear

long_basic_multiplier : 3
long_basic_unit      : 2 3
short_basic_multiplier : 4
short_basic_unit     : 1 4
unit_term_unpowered  : 0

Parsing method: LALR

state 0

    (0) S' -> . unit_term_unpowered
    (1) unit_term_unpowered -> . short_basic_unit
    (2) unit_term_unpowered -> . long_basic_unit
    (3) unit_term_unpowered -> . long_basic_multiplier long_basic_unit
    (4) unit_term_unpowered -> . short_basic_multiplier short_basic_unit
    (20) short_basic_unit -> . SHORT_VOLT
    (21) short_basic_unit -> . SHORT_AMP
    (22) short_basic_unit -> . SHORT_SIEMEN
    (23) short_basic_unit -> . SHORT_JOULE
    (24) short_basic_unit -> . SHORT_OHM
    (25) short_basic_unit -> . SHORT_COULOMB
    (26) short_basic_unit -> . SHORT_FARAD
    (27) short_basic_unit -> . SHORT_METER
    (28) short_basic_unit -> . SHORT_GRAM
    (29) short_basic_unit -> . SHORT_SECOND
    (30) short_basic_unit -> . SHORT_KELVIN
    (31) short_basic_unit -> . SHORT_MOLE
    (32) short_basic_unit -> . SHORT_CANDELA
    (33) short_basic_unit -> . SHORT_MOLAR
    (34) short_basic_unit -> . SHORT_HERTZ
    (5) long_basic_unit -> . LONG_VOLT
    (6) long_basic_unit -> . LONG_AMP
    (7) long_basic_unit -> . LONG_SIEMEN
    (8) long_basic_unit -> . LONG_JOULE
    (9) long_basic_unit -> . LONG_OHM
    (10) long_basic_unit -> . LONG_COULOMB
    (11) long_basic_unit -> . LONG_FARAD
    (12) long_basic_unit -> . LONG_METER
    (13) long_basic_unit -> . LONG_GRAM
    (14) long_basic_unit -> . LONG_SECOND
    (15) long_basic_unit -> . LONG_KELVIN
    (16) long_basic_unit -> . LONG_MOLE
    (17) long_basic_unit -> . LONG_CANDELA
    (18) long_basic_unit -> . LONG_MOLAR
    (19) long_basic_unit -> . LONG_HERTZ
    (35) long_basic_multiplier -> . LONG_GIGA
    (36) long_basic_multiplier -> . LONG_MEGA
    (37) long_basic_multiplier -> . LONG_KILO
    (38) long_basic_multiplier -> . LONG_CENTI
    (39) long_basic_multiplier -> . LONG_MILLI
    (40) long_basic_multiplier -> . LONG_MICRO
    (41) long_basic_multiplier -> . LONG_NANO
    (42) long_basic_multiplier -> . LONG_PICO
    (43) short_basic_multiplier -> . SHORT_GIGA
    (44) short_basic_multiplier -> . SHORT_MEGA
    (45) short_basic_multiplier -> . SHORT_KILO
    (46) short_basic_multiplier -> . SHORT_CENTI
    (47) short_basic_multiplier -> . SHORT_MILLI
    (48) short_basic_multiplier -> . SHORT_MICRO
    (49) short_basic_multiplier -> . SHORT_NANO
    (50) short_basic_multiplier -> . SHORT_PICO

    SHORT_VOLT      shift and go to state 31
    SHORT_AMP       shift and go to state 38
    SHORT_SIEMEN    shift and go to state 28
    SHORT_JOULE     shift and go to state 7
    SHORT_OHM       shift and go to state 10
    SHORT_COULOMB   shift and go to state 17
    SHORT_FARAD     shift and go to state 12
    SHORT_METER     shift and go to state 43
    SHORT_GRAM      shift and go to state 27
    SHORT_SECOND    shift and go to state 41
    SHORT_KELVIN    shift and go to state 42
    SHORT_MOLE      shift and go to state 9
    SHORT_CANDELA   shift and go to state 26
    SHORT_MOLAR     shift and go to state 6
    SHORT_HERTZ     shift and go to state 34
    LONG_VOLT       shift and go to state 48
    LONG_AMP        shift and go to state 32
    LONG_SIEMEN     shift and go to state 11
    LONG_JOULE      shift and go to state 4
    LONG_OHM        shift and go to state 37
    LONG_COULOMB    shift and go to state 19
    LONG_FARAD      shift and go to state 30
    LONG_METER      shift and go to state 29
    LONG_GRAM       shift and go to state 23
    LONG_SECOND     shift and go to state 46
    LONG_KELVIN     shift and go to state 45
    LONG_MOLE       shift and go to state 3
    LONG_CANDELA    shift and go to state 47
    LONG_MOLAR      shift and go to state 1
    LONG_HERTZ      shift and go to state 35
    LONG_GIGA       shift and go to state 21
    LONG_MEGA       shift and go to state 24
    LONG_KILO       shift and go to state 13
    LONG_CENTI      shift and go to state 40
    LONG_MILLI      shift and go to state 25
    LONG_MICRO      shift and go to state 15
    LONG_NANO       shift and go to state 44
    LONG_PICO       shift and go to state 14
    SHORT_GIGA      shift and go to state 51
    SHORT_MEGA      shift and go to state 18
    SHORT_KILO      shift and go to state 2
    SHORT_CENTI     shift and go to state 16
    SHORT_MILLI     shift and go to state 39
    SHORT_MICRO     shift and go to state 20
    SHORT_NANO      shift and go to state 36
    SHORT_PICO      shift and go to state 8

    long_basic_unit                shift and go to state 22
    unit_term_unpowered            shift and go to state 33
    short_basic_multiplier         shift and go to state 50
    long_basic_multiplier          shift and go to state 5
    short_basic_unit               shift and go to state 49

state 1

    (18) long_basic_unit -> LONG_MOLAR .

    $end            reduce using rule 18 (long_basic_unit -> LONG_MOLAR .)


state 2

    (45) short_basic_multiplier -> SHORT_KILO .

    SHORT_VOLT      reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_AMP       reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_SIEMEN    reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_JOULE     reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_OHM       reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_COULOMB   reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_FARAD     reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_METER     reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_GRAM      reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_SECOND    reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_KELVIN    reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_MOLE      reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_CANDELA   reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_MOLAR     reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)
    SHORT_HERTZ     reduce using rule 45 (short_basic_multiplier -> SHORT_KILO .)


state 3

    (16) long_basic_unit -> LONG_MOLE .

    $end            reduce using rule 16 (long_basic_unit -> LONG_MOLE .)


state 4

    (8) long_basic_unit -> LONG_JOULE .

    $end            reduce using rule 8 (long_basic_unit -> LONG_JOULE .)


state 5

    (3) unit_term_unpowered -> long_basic_multiplier . long_basic_unit
    (5) long_basic_unit -> . LONG_VOLT
    (6) long_basic_unit -> . LONG_AMP
    (7) long_basic_unit -> . LONG_SIEMEN
    (8) long_basic_unit -> . LONG_JOULE
    (9) long_basic_unit -> . LONG_OHM
    (10) long_basic_unit -> . LONG_COULOMB
    (11) long_basic_unit -> . LONG_FARAD
    (12) long_basic_unit -> . LONG_METER
    (13) long_basic_unit -> . LONG_GRAM
    (14) long_basic_unit -> . LONG_SECOND
    (15) long_basic_unit -> . LONG_KELVIN
    (16) long_basic_unit -> . LONG_MOLE
    (17) long_basic_unit -> . LONG_CANDELA
    (18) long_basic_unit -> . LONG_MOLAR
    (19) long_basic_unit -> . LONG_HERTZ

    LONG_VOLT       shift and go to state 48
    LONG_AMP        shift and go to state 32
    LONG_SIEMEN     shift and go to state 11
    LONG_JOULE      shift and go to state 4
    LONG_OHM        shift and go to state 37
    LONG_COULOMB    shift and go to state 19
    LONG_FARAD      shift and go to state 30
    LONG_METER      shift and go to state 29
    LONG_GRAM       shift and go to state 23
    LONG_SECOND     shift and go to state 46
    LONG_KELVIN     shift and go to state 45
    LONG_MOLE       shift and go to state 3
    LONG_CANDELA    shift and go to state 47
    LONG_MOLAR      shift and go to state 1
    LONG_HERTZ      shift and go to state 35

    long_basic_unit                shift and go to state 52

state 6

    (33) short_basic_unit -> SHORT_MOLAR .

    $end            reduce using rule 33 (short_basic_unit -> SHORT_MOLAR .)


state 7

    (23) short_basic_unit -> SHORT_JOULE .

    $end            reduce using rule 23 (short_basic_unit -> SHORT_JOULE .)


state 8

    (50) short_basic_multiplier -> SHORT_PICO .

    SHORT_VOLT      reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_AMP       reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_SIEMEN    reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_JOULE     reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_OHM       reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_COULOMB   reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_FARAD     reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_METER     reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_GRAM      reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_SECOND    reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_KELVIN    reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_MOLE      reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_CANDELA   reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_MOLAR     reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)
    SHORT_HERTZ     reduce using rule 50 (short_basic_multiplier -> SHORT_PICO .)


state 9

    (31) short_basic_unit -> SHORT_MOLE .

    $end            reduce using rule 31 (short_basic_unit -> SHORT_MOLE .)


state 10

    (24) short_basic_unit -> SHORT_OHM .

    $end            reduce using rule 24 (short_basic_unit -> SHORT_OHM .)


state 11

    (7) long_basic_unit -> LONG_SIEMEN .

    $end            reduce using rule 7 (long_basic_unit -> LONG_SIEMEN .)


state 12

    (26) short_basic_unit -> SHORT_FARAD .

    $end            reduce using rule 26 (short_basic_unit -> SHORT_FARAD .)


state 13

    (37) long_basic_multiplier -> LONG_KILO .

    LONG_VOLT       reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_AMP        reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_SIEMEN     reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_JOULE      reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_OHM        reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_COULOMB    reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_FARAD      reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_METER      reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_GRAM       reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_SECOND     reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_KELVIN     reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_MOLE       reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_CANDELA    reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_MOLAR      reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)
    LONG_HERTZ      reduce using rule 37 (long_basic_multiplier -> LONG_KILO .)


state 14

    (42) long_basic_multiplier -> LONG_PICO .

    LONG_VOLT       reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_AMP        reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_SIEMEN     reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_JOULE      reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_OHM        reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_COULOMB    reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_FARAD      reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_METER      reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_GRAM       reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_SECOND     reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_KELVIN     reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_MOLE       reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_CANDELA    reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_MOLAR      reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)
    LONG_HERTZ      reduce using rule 42 (long_basic_multiplier -> LONG_PICO .)


state 15

    (40) long_basic_multiplier -> LONG_MICRO .

    LONG_VOLT       reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_AMP        reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_SIEMEN     reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_JOULE      reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_OHM        reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_COULOMB    reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_FARAD      reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_METER      reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_GRAM       reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_SECOND     reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_KELVIN     reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_MOLE       reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_CANDELA    reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_MOLAR      reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)
    LONG_HERTZ      reduce using rule 40 (long_basic_multiplier -> LONG_MICRO .)


state 16

    (46) short_basic_multiplier -> SHORT_CENTI .

    SHORT_VOLT      reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_AMP       reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_SIEMEN    reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_JOULE     reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_OHM       reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_COULOMB   reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_FARAD     reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_METER     reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_GRAM      reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_SECOND    reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_KELVIN    reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_MOLE      reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_CANDELA   reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_MOLAR     reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)
    SHORT_HERTZ     reduce using rule 46 (short_basic_multiplier -> SHORT_CENTI .)


state 17

    (25) short_basic_unit -> SHORT_COULOMB .

    $end            reduce using rule 25 (short_basic_unit -> SHORT_COULOMB .)


state 18

    (44) short_basic_multiplier -> SHORT_MEGA .

    SHORT_VOLT      reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_AMP       reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_SIEMEN    reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_JOULE     reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_OHM       reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_COULOMB   reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_FARAD     reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_METER     reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_GRAM      reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_SECOND    reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_KELVIN    reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_MOLE      reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_CANDELA   reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_MOLAR     reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)
    SHORT_HERTZ     reduce using rule 44 (short_basic_multiplier -> SHORT_MEGA .)


state 19

    (10) long_basic_unit -> LONG_COULOMB .

    $end            reduce using rule 10 (long_basic_unit -> LONG_COULOMB .)


state 20

    (48) short_basic_multiplier -> SHORT_MICRO .

    SHORT_VOLT      reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_AMP       reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_SIEMEN    reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_JOULE     reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_OHM       reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_COULOMB   reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_FARAD     reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_METER     reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_GRAM      reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_SECOND    reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_KELVIN    reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_MOLE      reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_CANDELA   reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_MOLAR     reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)
    SHORT_HERTZ     reduce using rule 48 (short_basic_multiplier -> SHORT_MICRO .)


state 21

    (35) long_basic_multiplier -> LONG_GIGA .

    LONG_VOLT       reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_AMP        reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_SIEMEN     reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_JOULE      reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_OHM        reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_COULOMB    reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_FARAD      reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_METER      reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_GRAM       reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_SECOND     reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_KELVIN     reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_MOLE       reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_CANDELA    reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_MOLAR      reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)
    LONG_HERTZ      reduce using rule 35 (long_basic_multiplier -> LONG_GIGA .)


state 22

    (2) unit_term_unpowered -> long_basic_unit .

    $end            reduce using rule 2 (unit_term_unpowered -> long_basic_unit .)


state 23

    (13) long_basic_unit -> LONG_GRAM .

    $end            reduce using rule 13 (long_basic_unit -> LONG_GRAM .)


state 24

    (36) long_basic_multiplier -> LONG_MEGA .

    LONG_VOLT       reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_AMP        reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_SIEMEN     reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_JOULE      reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_OHM        reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_COULOMB    reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_FARAD      reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_METER      reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_GRAM       reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_SECOND     reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_KELVIN     reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_MOLE       reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_CANDELA    reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_MOLAR      reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)
    LONG_HERTZ      reduce using rule 36 (long_basic_multiplier -> LONG_MEGA .)


state 25

    (39) long_basic_multiplier -> LONG_MILLI .

    LONG_VOLT       reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_AMP        reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_SIEMEN     reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_JOULE      reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_OHM        reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_COULOMB    reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_FARAD      reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_METER      reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_GRAM       reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_SECOND     reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_KELVIN     reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_MOLE       reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_CANDELA    reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_MOLAR      reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)
    LONG_HERTZ      reduce using rule 39 (long_basic_multiplier -> LONG_MILLI .)


state 26

    (32) short_basic_unit -> SHORT_CANDELA .

    $end            reduce using rule 32 (short_basic_unit -> SHORT_CANDELA .)


state 27

    (28) short_basic_unit -> SHORT_GRAM .

    $end            reduce using rule 28 (short_basic_unit -> SHORT_GRAM .)


state 28

    (22) short_basic_unit -> SHORT_SIEMEN .

    $end            reduce using rule 22 (short_basic_unit -> SHORT_SIEMEN .)


state 29

    (12) long_basic_unit -> LONG_METER .

    $end            reduce using rule 12 (long_basic_unit -> LONG_METER .)


state 30

    (11) long_basic_unit -> LONG_FARAD .

    $end            reduce using rule 11 (long_basic_unit -> LONG_FARAD .)


state 31

    (20) short_basic_unit -> SHORT_VOLT .

    $end            reduce using rule 20 (short_basic_unit -> SHORT_VOLT .)


state 32

    (6) long_basic_unit -> LONG_AMP .

    $end            reduce using rule 6 (long_basic_unit -> LONG_AMP .)


state 33

    (0) S' -> unit_term_unpowered .



state 34

    (34) short_basic_unit -> SHORT_HERTZ .

    $end            reduce using rule 34 (short_basic_unit -> SHORT_HERTZ .)


state 35

    (19) long_basic_unit -> LONG_HERTZ .

    $end            reduce using rule 19 (long_basic_unit -> LONG_HERTZ .)


state 36

    (49) short_basic_multiplier -> SHORT_NANO .

    SHORT_VOLT      reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_AMP       reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_SIEMEN    reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_JOULE     reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_OHM       reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_COULOMB   reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_FARAD     reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_METER     reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_GRAM      reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_SECOND    reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_KELVIN    reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_MOLE      reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_CANDELA   reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_MOLAR     reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)
    SHORT_HERTZ     reduce using rule 49 (short_basic_multiplier -> SHORT_NANO .)


state 37

    (9) long_basic_unit -> LONG_OHM .

    $end            reduce using rule 9 (long_basic_unit -> LONG_OHM .)


state 38

    (21) short_basic_unit -> SHORT_AMP .

    $end            reduce using rule 21 (short_basic_unit -> SHORT_AMP .)

